--- a/05_CSS/quiz/layout/3_blog_list.html
+++ b/05_CSS/quiz/layout/3_blog_list.html
@@ -6,17 +6,19 @@
   <title>Document</title>
   <style>
     /* 공통 스타일 앞부분 */
-    a{display: block; text-decoration: none; color: black;}
+    a{display: block; text-decoration: none; color: black; font-size: 20px;}
     ul{list-style: none; display: flex;}
-    ul > li{width: 80px; height: 40px; background-color: #e8e8e8; border-radius: 5px; text-align: center; line-height: 40px;}
+    ul > li{width: 80px; background-color: #e8e8e8; border-radius: 5px; text-align: center; padding: 10px;}
     li + li {margin-left: 10px;}
 
-    .container{display: flex; width: 800px; margin: 0 auto; padding: 20px;}
-    .blog-content{width: 80%;}
-    .blog-img{width: 20%;}
+    .container{display: flex; width: 800px; margin: 0 auto;}
+    .blog-content{width: 80%; height: 200px;}
+    .blog-img{width: 20%; height: 200px;}
+
     .content-header{display: flex; align-items: center;}
-    .blog-profile{width: 80px; border-radius: 50%;}
-    .blog-name p {color: #333;}
+    .blog-profile{width: 50px; height: 50px; border-radius: 50%;}
+    .blog-name h4{margin: 0;}
+    .blog-name p {color: #333; margin: 0; margin-top: 10px;}
     .content-body{padding-right: 20px;}
     .blog-img > img{width: 100%; height: 100%;}
   </style>
