--- a/05_CSS/quiz/layout/4_form_input.html
+++ b/05_CSS/quiz/layout/4_form_input.html
@@ -7,14 +7,15 @@
   <style>
     div, input, textarea{ box-sizing: border-box;}
     textarea{resize: none; border:2px solid #ccc;  border-radius: 6px; width: 100%; height: 130px;}
-    button{cursor: pointer; background-color: orangered; border: 0; border-radius: 5px; padding: 10px 50px; color: white; font-size: 18px;}
+    button{cursor: pointer; background-color: lightsalmon; border: 0; border-radius: 5px; padding: 10px 50px; color: white; font-size: 18px; transition: 0.5s;}
+    button:hover{background-color: coral;}
 
     .form-background{width: 100vw; height: 100vh; background-color: #333; padding: 30px 0; display: flex; align-items: center; justify-content: center;}
     .form-container { width: 80%; max-width: 600px; margin: 0 auto; background-color: white; padding:
       20px;}
 
     .text-input {width: 100%; padding: 10px; font-size: 20px; border:2px solid #ccc; border-radius: 6px; outline: none; transition: 0.5s;}
-    .text-input:focus {border: 2px solid red;}
+    .text-input:focus {border: 2px solid #aaa;}
     .d-flex {display: flex;}
     .flex-1 {flex: 1;}
     .flex-1 + .flex-1 {margin-left: 20px;}
@@ -50,7 +51,7 @@
       </div>
     </div>
     <p><label for="msg">Message</label></p>
-    <textarea id="msg"></textarea>
+    <textarea id="msg" class="text-input"></textarea>
 
     <div class="d-flex justy-between align-center">
       <div>
