--- a/06_portfolio-site/main.css
+++ b/06_portfolio-site/main.css
@@ -361,3 +361,87 @@ header nav > ul > li > a:hover {
 #modal .modal__inner .btn-close:hover {
   background-color: #333;
 }
+
+
+/* CONTACT */
+.contact {
+  padding: 200px 0;
+}
+.contact .contact__info li {
+  line-height: 2;
+  text-align: center;
+
+  /* 애니메이션 효과 추가 */
+  opacity: 0;
+  transition: 1s;
+}
+/* 애니메이션 효과 추가 */
+.contact .contact__info li:nth-child(1),
+.contact .contact__info li:nth-child(3) {
+  /* 오른쪽에서 왼쪽으로 나타나는 */
+  transform: translateX(150px);
+}
+.contact .contact__info li:nth-child(2) {
+  /* 왼쪽에서 오른쪽으로 나타나는 */
+  transform: translateX(-150px);
+}
+.contact.show .contact__info li {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.contact .contact__sns {
+  margin-top: 20px;
+}
+.contact .contact__sns ul {
+  display: flex;
+  justify-content: center;
+  column-gap: 10px;
+}
+/* 애니메이션 효과 추가 */
+.contact .contact__sns ul li {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: 1s;
+}
+.contact.show .contact__sns ul li {
+  opacity: 1;
+  transform: translateY(0);
+}
+.contact.show .contact__sns ul li:nth-child(1) {
+  transition-delay: 0.2s;
+}
+.contact.show .contact__sns ul li:nth-child(2) {
+  transition-delay: 0.4s;
+}
+.contact .contact__sns ul li img {
+  width: 30px;
+}
+
+/* FOOTER */
+footer .copyright {
+  text-align: center;
+  font-weight: 600;
+  line-height: 200px;
+}
+
+/* SCROLL TO TOP */
+#to-top {
+  width: 42px;
+  height: 42px;
+  background-color: #fff8e8;
+  border: 2px solid #333;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
+  transition: 0.5s;
+  /* 처음 상태는 투명에 x축으로 +100px 지점 */
+  opacity: 0;
+  transform: translateX(100px);
+}
