--- a/07_myportfolio/css/main.css
+++ b/07_myportfolio/css/main.css
@@ -29,6 +29,21 @@ body{
   background-color: #333335;
   border-radius: 5px;
 }
+
+.relative {position: relative;}
+
+.d-flex {display: flex;}
+
+.align-center {align-items: center;}
+
+.justy-center{justify-content: center;}
+.justy-between{justify-content: space-between;}
+
+.f-column {flex-direction: column;}
+
+.mr-20{margin-right: 20px;}
+.mt-20{margin-top: 20px;}
+
 a{
   text-decoration: none;
   color: inherit;
@@ -40,12 +55,10 @@ a{
 }
 
 .inner {
-  max-width: 1200px;
+  max-width: 1024px;
   padding: 0 20px;
   margin: 0 auto;
 }
-
-.relative {position: relative;}
 
 img {
   display: block;
@@ -70,11 +83,10 @@ img {
 
 .btn {
   width: 120px;
-  height: 40px;
   display: block; /*a, span같은 인라인 요소를 버튼으로 사용할수도 있으니 블록으로 지정*/
-  border: 2px solid #333;
+  border: 1px solid #333;
   border-radius: 4px;
-  font-size:  18px;
+  font-size:  16px;
   font-weight: 700;
   text-align: center;
   cursor: pointer;
@@ -82,12 +94,11 @@ img {
 }
 
 .btn-group {
-  height: 40px;
   display: flex;
 }
 
 .btn + .btn {
-  margin-left: 30px;
+  margin-left: 10px;
 }
 
 .btn:hover {
@@ -121,6 +132,7 @@ header > .inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  vertical-align: middle;
 }
 
 header > .inner > span {
@@ -232,7 +244,7 @@ header nav > ul > li > a:hover {
 }
 
 .visual > .inner .vc__bottom {
-  width: 420px;
+  width: 450px;
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -246,11 +258,14 @@ header nav > ul > li > a:hover {
 
 .visual > .inner .vc__bottom li {
   flex: 1;
+  display: flex;
+  align-items: center;
   font-size: 14px;
 }
 .visual > .inner .vc__bottom li > img {
   width: 16px;
   object-fit: contain;
+  margin-right: 4px;
 }
 
 
@@ -286,7 +301,7 @@ header nav > ul > li > a:hover {
 
 .about .about__wrapper .about__img {
   width: 60%;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
   border-radius: 50%;
 }
 
@@ -300,16 +315,26 @@ header nav > ul > li > a:hover {
 }
 
 .about .about__wrapper .about__text ul {
-  margin-bottom: 40px;
+  margin-bottom: 36px;
 }
 
 .about .about__wrapper .about__text:nth-child(1) {
   width: 40%;
-  padding: 0 40px;
+  padding-left: 80px;
 }
 
 .about .about__wrapper .about__text:nth-child(2){
   width: 40%;
+  padding-left: 40px;
+}
+
+.about .about__wrapper .about__text li p:nth-child(1) {
+  font-size: 14px;
+  color: #9e9e9e;
+}
+
+.about .about__wrapper .about__text li p:nth-child(2) {
+  margin-bottom: 8px;
 }
 
 .about .about__wrapper .about__text .slogan {
@@ -333,6 +358,7 @@ header nav > ul > li > a:hover {
 .about .about__wrapper .about__text .about__name p:nth-child(2){
   font-size: 16px;
   font-weight: 500;
+  margin-bottom: 40px;
 }
 
 .about .about__wrapper .about__text .about__edu {
@@ -345,7 +371,7 @@ header nav > ul > li > a:hover {
 }
 
 .about .about__wrapper .about__text h4 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
 }
 
@@ -359,9 +385,25 @@ header nav > ul > li > a:hover {
   padding-top: 120px;
 }
 
+
+.skill .inner .d-flex {
+  width: 100%;
+  padding-top: 20px;
+}
+
+.skill .inner .d-bottom {
+  width: 100%;
+}
+
+.skill .inner .d-flex > div:nth-child(1) {
+  width: 40%;
+}
+
+.skill .inner .d-flex > div:nth-child(2) {
+  width: 60%;
+}
 .skill-title {
   padding: 5px 10px;
-  background-color: #f1f1f1;
   font-size: 14px;
   font-weight: 700;
   text-align: center;
@@ -369,11 +411,19 @@ header nav > ul > li > a:hover {
   border-radius: 5px
 }
 
+.skill-title.skill-design {
+  background-color: #f3f3f3;
+}
+
+.skill-title.skill-pro {
+  background-color: #ffe3f3;
+} 
+
 .skill .skill__list {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
-  padding: 30px 0;
+  padding: 40px 0;
 }
 
 .skill .skill__list > li {
@@ -417,13 +467,13 @@ header nav > ul > li > a:hover {
 
 .skill .skill__list li div {
   height: 30px;
-  margin-bottom: 20px;
-  transform: rotate(-20deg);
-  transition: 0.5s;
-  color: #d8d8d8;
-  border-radius: 50%;
+  height: 30px;
 }
 
+.skill .skill__list li div img {
+  width: 100%;
+  height: 100%;
+}
 
 .skill .skill__list li div:hover {
   transform: rotate(0);
@@ -440,7 +490,18 @@ header nav > ul > li > a:hover {
   display: block;
   font-size: 18px;
   font-weight: 700;
-  margin: 20px 0;
+  margin: 10px 0;
+}
+
+.skill .skill__list > li:hover {
+  transition: 0.5s;
+  transform: translateY(-10px);
+  color: #e73c7e;
+}
+
+.skill .skill__list ul li{
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /* WORK */
@@ -480,14 +541,16 @@ header nav > ul > li > a:hover {
   font-weight: 700;
 }
 .work .port .port__text ul {
-  height: calc(100% - 72px);
-  padding: 20px 0;
+  height: calc(100% - 80px);
+  padding: 10px 0;
+  border-top: 1px solid #eaeaee;
+  border-bottom: 1px solid #eaeaee;
 }
 .work .port .port__text li {
   line-height: 1.8;
 }
 .work .port .port__text ul li:nth-child(2){
-  max-height: 212px;
+  max-height: 140px;
   overflow-y: auto;
   padding: 20px 20px 10px 0;
 }
@@ -602,8 +665,9 @@ header nav > ul > li > a:hover {
 /* FOOTER */
 footer .copyright {
   text-align: center;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 200px;
+  color: #9e9e9e;
 }
 
 /* SCROLL TO TOP */
