--- a/07_myportfolio/css/main.css
+++ b/07_myportfolio/css/main.css
@@ -30,6 +30,15 @@ body{
   border-radius: 5px;
 }
 
+.cursor {
+  position: absolute;
+  z-index: 100;
+}
+
+.cursor img {
+  width: 30px;
+}
+
 .relative {position: relative;}
 
 .d-flex {display: flex;}
@@ -135,8 +144,13 @@ header > .inner {
   vertical-align: middle;
 }
 
-header > .inner > span {
- font-size: 30px;
+.favorite {
+  color: #e73c7e;
+}
+
+
+header > .inner > a > img {
+  width: 30px;
 }
 
 header nav > ul { display: flex;}
@@ -252,15 +266,15 @@ header nav > ul > li > a:hover {
   background-color: #fff;
   border-radius: 5px;
   padding: 20px;
-  gap: 10px;
   box-shadow: 1px 5px 10px #181717;
 }
 
 .visual > .inner .vc__bottom li {
-  flex: 1;
+  width: 50%;
   display: flex;
   align-items: center;
   font-size: 14px;
+  padding: 4px 0;
 }
 .visual > .inner .vc__bottom li > img {
   width: 16px;
@@ -300,14 +314,15 @@ header nav > ul > li > a:hover {
 }
 
 .about .about__wrapper .about__img {
-  width: 60%;
-  margin-bottom: 60px;
+  max-width: 150px;
+  min-height: 150px;
+  margin-bottom: 40px;
   border-radius: 50%;
 }
 
 .about .about__wrapper .about__img img {
   width: 100%;
-  height: 100%;
+  object-fit: cover;
 }
 .about .about__wrapper .about__text {
   display: flex;
@@ -335,6 +350,25 @@ header nav > ul > li > a:hover {
 
 .about .about__wrapper .about__text li p:nth-child(2) {
   margin-bottom: 8px;
+}
+
+
+.about .about__text .left_move {
+  opacity: 0;
+  transform: translateX(150px);
+  transition: 1s;
+}
+
+.about .about__text .right_move {
+  opacity: 0;
+  transform: translateX(-150px);
+  transition: 1s;
+}
+
+.about.show .about__text .left_move,
+.about.show .about__text .right_move {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .about .about__wrapper .about__text .slogan {
@@ -609,14 +643,13 @@ header nav > ul > li > a:hover {
   z-index: 999;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
   display: none;
 }
 
 #modal .modal__inner,
 #modal2 .modal__inner {
-  width: 80%;
-  max-width: 1200px;
+  width: 100%;
   position: relative;
 }
 
@@ -633,8 +666,9 @@ header nav > ul > li > a:hover {
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
-  top: 10px;
-  right: 10px
+  top: -50px;
+  right: 80px;
+  z-index: 10;
 }
 
 #modal .modal__inner .btn-close:hover,
@@ -642,60 +676,25 @@ header nav > ul > li > a:hover {
   background-color: #333;
 }
 
-
-/* CONTACT */
-.contact {
-  padding: 200px 0;
+.swiper {
+  width: 80%;
+  height: 600px;
 }
-.contact .contact__info li {
-  line-height: 2;
+
+.swiper-slide {
   text-align: center;
-
-  /* 애니메이션 효과 추가 */
-  opacity: 0;
-  transition: 1s;
-}
-/* 애니메이션 효과 추가 */
-.contact .contact__info li:nth-child(1),
-.contact .contact__info li:nth-child(3) {
-  /* 오른쪽에서 왼쪽으로 나타나는 */
-  transform: translateX(150px);
-}
-.contact .contact__info li:nth-child(2) {
-  /* 왼쪽에서 오른쪽으로 나타나는 */
-  transform: translateX(-150px);
-}
-.contact.show .contact__info li {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.contact .contact__sns {
-  margin-top: 20px;
-}
-.contact .contact__sns ul {
+  font-size: 18px;
+  background: #fff;
   display: flex;
   justify-content: center;
-  column-gap: 10px;
+  align-items: center;
 }
-/* 애니메이션 효과 추가 */
-.contact .contact__sns ul li {
-  opacity: 0;
-  transform: translateY(100px);
-  transition: 1s;
-}
-.contact.show .contact__sns ul li {
-  opacity: 1;
-  transform: translateY(0);
-}
-.contact.show .contact__sns ul li:nth-child(1) {
-  transition-delay: 0.2s;
-}
-.contact.show .contact__sns ul li:nth-child(2) {
-  transition-delay: 0.4s;
-}
-.contact .contact__sns ul li img {
-  width: 30px;
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* FOOTER */
@@ -710,8 +709,8 @@ footer .copyright {
 #to-top {
   width: 42px;
   height: 42px;
-  background-color: #fff;
-  border: 2px solid #e73c7e;
+  background-color: #ffe3f3;
+  border: 1px solid #333;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
