--- a/07_myportfolio/css/main.css
+++ b/07_myportfolio/css/main.css
@@ -65,7 +65,6 @@ a{
 
 .inner {
   max-width: 1024px;
-  padding: 0 20px;
   margin: 0 auto;
 }
 
@@ -164,6 +163,16 @@ header nav > ul > li {
 
 header nav > ul > li > a:hover {
   color: #e73c7e;
+}
+
+header .btn-hamburger {
+  display: none;
+}
+
+header .btn-hamburger .material-symbols-outlined {
+  color: #333;
+  font-size: 32px;
+  line-height: normal;
 }
 
 /* VISUAL */
@@ -611,6 +620,7 @@ header nav > ul > li > a:hover {
   padding: 10px 0;
   border-top: 1px solid #eaeaee;
   border-bottom: 1px solid #eaeaee;
+  overflow: hidden;
 }
 .work .port .port__text li {
   line-height: 1.8;
@@ -736,4 +746,98 @@ footer .copyright {
 @keyframes up {
   0% {transform: translateY(7px); opacity: 0;}
   100% {transform: translateY(0px);}
+}
+
+@media screen and (max-width: 768px) {
+  .inner {
+    width: 90%;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .title::after {
+    width: 40px;
+  }
+
+  .about .about__wrapper .about__text:nth-child(1){
+    padding-left: 0;
+    width: 50%;
+  }
+  .about .about__wrapper .about__text:nth-child(2){
+    width: 50%;
+  }
+
+  header .btn-hamburger {
+    display: block;
+  }
+
+  header nav {
+    background-color: #f3f3f3;
+    color: #333;
+    position: fixed;
+    top: 51px;
+    left: 0;
+    width: 100%;
+    height: 0;
+    transition: 0.3s;
+    overflow: hidden;
+  }
+
+  header nav.active {
+    height: 100%;
+  }
+
+  header nav ul {
+    display: block;
+    padding-top: 60px;
+  }
+
+  header nav ul li {
+    width: 100%;
+    font-size: 24px;
+    padding: 0;
+  }
+
+  header nav ul li a{
+    display: block;
+    padding: 20px 80px;
+    width: 100%;
+  }
+
+  header nav ul li a:hover {
+    background-color: #e73c7e;
+    letter-spacing: 20px;
+    transition: 0.5s;
+    color: #fff;
+  }
+
+  #home .inner {
+    width: 90%;
+  }
+
+  .visual > .inner .vc__bottom {
+    width: 80%;
+  }
+
+  .visual > .inner .vc__bottom li{
+    width: 100%;
+    justify-content: center;
+  }
+
+  .skill .inner .d-flex {
+    flex-direction: column;
+  }
+  .skill .inner .d-flex > div:nth-child(1) {
+    width: 100%;
+  }
+
+  .skill .inner .d-flex > div:nth-child(2) {
+    width: 100%;
+  }
+
+  .skill .inner .list-caption ul {
+    width: 100%;
+  }
 }
